cabal-version:      2.4
name:               glow-cardano
version:            0.1.0.0

-- TODO: All glow-cardano modules should be namespaced by `Glow`, to avoid namespace conflicts
-- with external modules.

synopsis: Glow Cardano Backend

description: Glow Cardano Backend

bug-reports: https://github.com/Glow-lang/glow/issues

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable code-gen
  main-is: CodeGenMain.hs
  hs-source-dirs: app
  build-depends:
      base
    , glow-cardano
    , directory
    , optparse-applicative
    , plutus-contract
    , plutus-ledger
    , plutus-pab
  default-language: Haskell2010

-- WIP Pending proper CLI support
-- executable contract-cli
--   main-is: ContractMain.hs
--   hs-source-dirs: app
--   ghc-options:
--     -threaded
--   build-depends:
--       base >= 4.9 && < 5
--     , plutus-contract -any
--     , plutus-pab -any
--     , glow-cardano -any
--     , aeson -any
--     , freer-simple -any
--     , prettyprinter -any
--     , freer-extras -any
--     , plutus-ledger
--     , plutus-tx-plugin

executable glow-contract
  main-is: GlowMain.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
  build-depends:
      base >= 4.9 && < 5
    , plutus-contract -any
    , plutus-pab -any
    , glow-cardano -any
    , aeson -any
    , freer-simple -any
    , prettyprinter -any
    , freer-extras -any
    , plutus-ledger
    , plutus-tx-plugin

library
  hs-source-dirs: lib
  exposed-modules:
    -- NOTE: Non essential modules were commented out to reduce depdendency conflicts.
    -- See `architecture.md` for their usage.
    Glow.Client
    Glow.Client.Types
    Glow.CodeGen
    Glow.Contract
    Glow.Parser
    Glow.Types
    -- Glow.Util
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , bytestring
    , byteunits
    , containers
    , dependent-sum
    , lens
    , megaparsec
    , memory
    , mtl
    , prettyprinter
    , serialise
    , sexpr-parser
    , template-haskell
    , th-abstraction
    , text
    , these
    , utf8-string

    -- CARDANO
    , playground-common
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-tx -any
    , plutus-tx-plugin
  default-language: Haskell2010
  ghc-options:
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fobject-code

test-suite contract-tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
      Test.Glow.Contract
    , Test.Glow.Misc
    , Test.Glow.Parser
    , Test.Glow.Samples
    , Test.Glow.Utils
    , Test.Integration.Glow.Contract
    -- , Test.Glow.Contract
  default-language: Haskell2010
  ghc-options: -Wall -Wnoncanonical-monad-instances
              -Wincomplete-uni-patterns -Wincomplete-record-updates
              -Wredundant-constraints -Widentities -rtsopts
              -- See Plutus Tx readme
              -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:
      base >= 4.9 && < 5
    , aeson
    , bytestring
    , cardano-crypto
    , cborg
    , containers
    , cryptonite
    , data-default
    , directory
    , freer-simple
    , hedgehog
    , http-client
    , memory
    , plutus-core
    -- TODO: Figure + Standardize use of -any
    , plutus-tx -any
    , plutus-tx-plugin
    , plutus-contract -any
    , plutus-ledger
    , plutus-pab -any
    -- TODO rename to glow-cardano
    , glow-cardano -any
    , prettyprinter
    , process
    , raw-strings-qq
    , servant
    , servant-client
    , tasty
    , tasty-hunit
    , tasty-hedgehog
    , tasty-golden
    , text
    , unordered-containers
    -- Convenience for dealing with encoding hex strings as bytestrings
    , word8
  ghc-options:
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fobject-code
